--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:id="@+id/Welcome"
-    android:background="@drawable/sall"
+    android:background="@drawable/first"
     android:orientation="horizontal">
 
 
