--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:id="@+id/Welcome"
-    android:background="@drawable/baby">
+    android:background="@drawable/first"
+    android:orientation="vertical">
 
 
 </LinearLayout>
